# sales-kpi-command-center

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
app/: streamlit_app.py
assets/: README.md
data/: sample_kpis.csv
docs/: index.html
src/: __init__.py  alerts.py  brand.py  data.py  funnel.py  metrics.py
tests/: test_alerts.py  test_data.py  test_funnel.py  test_metrics.py
